--- a/css/style.css
+++ b/css/style.css
@@ -4,14 +4,6 @@
     font-family: "Recoleta Regular DEMO";
     text-decoration: underline 5px yellow;
   }
-  /*.head-title .line{
-    z-index: -1;
-    position: absolute;
-    bottom: 15px;
-    width: 100%;
-    height: 13px;
-    background: #f2e500;
-  }*/
   .quote{
     position: relative;
     width: 100%;
@@ -142,6 +134,7 @@
     top: 20%;
     left: 10%;
   }
+  .home-header .one-carousel.owl-theme .owl-dots{display: none;}
   .home-highlight .product .frame-top{
     z-index: 10;
     position: absolute;
@@ -200,6 +193,22 @@
     color : #1d1d1b;
   }
   .home-contact form .button-def{padding: 8px 20px;}
+  /* Mobile */
+  @media screen and (max-width: 846px) {
+    .home-header .one-carousel.owl-theme .owl-nav button.owl-prev img,
+    .home-header .one-carousel.owl-theme .owl-nav button.owl-next img{
+      width: 30px;
+    }
+    .home-highlight .detail{
+      position: relative;
+      margin: 30px auto 10px;
+      top: unset;
+      left: unset;
+      right: unset;
+      transform: unset;
+      width: 100%;
+    }
+  }
 /* Shop Page */
   .shop-highlight p{margin-bottom: 0;}
   .shop-highlight .image1{
