--- a/css/style.css
+++ b/css/style.css
@@ -117,6 +117,7 @@
     padding: 10px 0 10px 30px;
   }
   #og-nav .cart{padding: 4px 0;}
+  #og-nav .sidenav{display: none;}
   /* Mobile */
   @media screen and (max-width: 846px) {
     #og-nav{padding: 0;}
@@ -130,10 +131,121 @@
       height: 100px;
       background: #000;
     }
-    #og-nav .plus a{
+    #og-nav .plus p{
       color:#fff;
       font-size: 45px !important;
+      cursor: pointer;
     }
+
+
+
+
+
+
+
+
+
+
+
+    /*Sidenav*/
+    #og-nav .sidenav{
+      z-index: 1030;
+      display: block;
+      overflow-y: auto;
+      position: fixed;
+      top: 0;
+      right: 0;
+      width: 0;
+      height: 100vh;
+      background: #1d1d1d;
+      transition: 0.8s;
+    }
+    #og-nav .sidenav.slideIn{
+      padding: 15% 20% 15% 10% !important;
+      width: 100%;
+    }
+    #og-nav .sidenav.slideOut{
+      opacity: 0;
+      padding: 0 !important;
+      width: 0%;
+      transition: 0.8s;
+    }
+    #og-nav .fa-times{
+      display: block;
+      position: absolute;
+      z-index: 1035;
+      padding-left: 0;
+      top: 7%;
+      right: 8%;
+      list-style: none;
+      font-size: 44px;
+      color: #fff;
+      -webkit-text-stroke: 4px #1d1d1d;
+    }
+    #og-nav .sidenav ul{
+      margin-top: 10%;      
+      margin-bottom: 0;
+      padding: 0 !important;
+      list-style: none !important;
+      width: 100% !important;
+      height: 100% !important;
+    }
+    #og-nav .sidenav ul li a{
+      position: relative !important;
+      display: block !important;
+      padding: 0 0 15px !important;
+      width: 100% !important;
+      font-family: "Futura Book" !important;
+      font-size: 14px !important;
+      line-height: 26px !important;
+      letter-spacing: 0.75px !important;
+      text-align: left !important;
+      text-transform: uppercase !important;
+      text-decoration: none !important;
+      outline: none !important;
+      color: #fff !important;
+    }
+    #og-nav .sidenav ul li ul{
+      padding: 10px 0 !important;
+      border-top: 1px solid #fff !important;
+      border-bottom: 1px solid #fff !important;
+    }
+    #og-nav .sidenav ul li ul li ul{
+      padding: 10px 0 !important;
+      border-top: 1px solid #fff !important;
+      border-bottom: 1px solid #fff !important;
+    }
+    #og-nav .sidenav ul li ul li ul li a{
+      padding: 10px 20px !important;
+    }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
   }
 /* Footer */
   #og-footer{
@@ -345,15 +457,12 @@
     }
     .detail-other{padding: 15% 0 20% 10% !important;}
     .detail-other .title p{margin-bottom: 10px;}
-    .detail-other .post-carousel{
-      display: unset !important;
-    }
     .detail-other .post-carousel .owl-stage{
       width: 11132px !important; 
       padding-left: 0px !important; 
       padding-right: 40px !important;
     }
-    .detail-other .post-carousel .owl-item .item{
+    .detail-other .post-carousel .owl-item .mpc{
       width: 100%;
       height: auto;
     }
